add compound score column

--- a/lesson-sentiment-analysis.ipynb
+++ b/lesson-sentiment-analysis.ipynb
@@ -169,28 +169,180 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cabc95e6-d53c-4cad-9d25-f17955e1d3d6",
+   "cell_type": "markdown",
+   "id": "786545b2-fb1a-4289-a08a-eeef2fa49064",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## VADER"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "457551b9-25f8-42e8-ac23-196984a844bd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## initialize VADER sentiment analyzer\n",
+    "sia = SentimentIntensityAnalyzer()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e861af9d-160b-4702-bcdf-3f328faa926d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>neg</th>\n",
+       "      <th>neu</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pizza is good</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.408</td>\n",
+       "      <td>0.592</td>\n",
+       "      <td>0.4404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pizza is very good</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.484</td>\n",
+       "      <td>0.516</td>\n",
+       "      <td>0.4927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pizza is great</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.328</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>0.6249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pizza is great!</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.313</td>\n",
+       "      <td>0.687</td>\n",
+       "      <td>0.6588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pizza is great :-)</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.238</td>\n",
+       "      <td>0.762</td>\n",
+       "      <td>0.7506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Pizza is not bad</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.513</td>\n",
+       "      <td>0.487</td>\n",
+       "      <td>0.4310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Pizza is bad</td>\n",
+       "      <td>0.636</td>\n",
+       "      <td>0.364</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.5423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Pizza is bad!</td>\n",
+       "      <td>0.655</td>\n",
+       "      <td>0.345</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.5848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Pizza is bad!!!</td>\n",
+       "      <td>0.686</td>\n",
+       "      <td>0.314</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.6571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Pizza is a bomb</td>\n",
+       "      <td>0.615</td>\n",
+       "      <td>0.385</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.4939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Pizza is the bomb</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.429</td>\n",
+       "      <td>0.571</td>\n",
+       "      <td>0.6124</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  text    neg    neu    pos  compound\n",
+       "0        Pizza is good  0.000  0.408  0.592    0.4404\n",
+       "1   Pizza is very good  0.000  0.484  0.516    0.4927\n",
+       "2       Pizza is great  0.000  0.328  0.672    0.6249\n",
+       "3      Pizza is great!  0.000  0.313  0.687    0.6588\n",
+       "4   Pizza is great :-)  0.000  0.238  0.762    0.7506\n",
+       "5     Pizza is not bad  0.000  0.513  0.487    0.4310\n",
+       "6         Pizza is bad  0.636  0.364  0.000   -0.5423\n",
+       "7        Pizza is bad!  0.655  0.345  0.000   -0.5848\n",
+       "8      Pizza is bad!!!  0.686  0.314  0.000   -0.6571\n",
+       "9      Pizza is a bomb  0.615  0.385  0.000   -0.4939\n",
+       "10   Pizza is the bomb  0.000  0.429  0.571    0.6124"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now, we will use the sia object to define a dictionary of \"polarity scores\" for the sample text.\n",
+    "sample_df['sentiment_scores'] = sample_df['text'].map(sia.polarity_scores)\n",
+    "# Convert the column of dictionaries into separate columns\n",
+    "sample_df_scores = sample_df['sentiment_scores'].apply(pd.Series)\n",
+    "# Join the new DataFrame with the original DataFrame\n",
+    "sample_df = pd.concat([sample_df, sample_df_scores], axis=1).drop('sentiment_scores', axis=1)\n",
+    "sample_df\n"
+   ]
   },
   {
    "cell_type": "code",
