--- a/lesson-vectorization.ipynb
+++ b/lesson-vectorization.ipynb
@@ -449,37 +449,240 @@
    "id": "8065580d-ccd1-4b67-8b0a-0fc41f29230d",
    "metadata": {},
    "source": [
-    "## TF-IDF Vectorization"
+    "## TF-IDF Vectorization\n",
+    "\n",
+    "a higher weight is given to unique words across all docs (ranges from 0-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b1d066b5-7a3c-4301-9735-ddccdd3086ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amazing</th>\n",
+       "      <th>an</th>\n",
+       "      <th>best</th>\n",
+       "      <th>enjoy</th>\n",
+       "      <th>favorite</th>\n",
+       "      <th>fun</th>\n",
+       "      <th>give</th>\n",
+       "      <th>is</th>\n",
+       "      <th>it</th>\n",
+       "      <th>language</th>\n",
+       "      <th>...</th>\n",
+       "      <th>learning</th>\n",
+       "      <th>life</th>\n",
+       "      <th>love</th>\n",
+       "      <th>my</th>\n",
+       "      <th>new</th>\n",
+       "      <th>programming</th>\n",
+       "      <th>python</th>\n",
+       "      <th>so</th>\n",
+       "      <th>the</th>\n",
+       "      <th>would</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.3791</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.3099</td>\n",
+       "      <td>0.2341</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.452</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.452</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.452</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.3564</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.2359</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.3383</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.6477</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.3383</td>\n",
+       "      <td>0.2667</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.5296</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.4822</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.3078</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.4822</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.4822</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.2516</td>\n",
+       "      <td>0.3801</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   amazing     an   best  enjoy  favorite    fun   give      is     it  \\\n",
+       "0   0.0000  0.000  0.297  0.297    0.0000  0.297  0.000  0.3791  0.000   \n",
+       "1   0.0000  0.452  0.000  0.000    0.0000  0.000  0.452  0.0000  0.452   \n",
+       "2   0.3383  0.000  0.000  0.000    0.0000  0.000  0.000  0.6477  0.000   \n",
+       "3   0.0000  0.000  0.000  0.000    0.4822  0.000  0.000  0.3078  0.000   \n",
+       "\n",
+       "   language  ...  learning    life    love      my    new  programming  \\\n",
+       "0    0.0000  ...     0.297  0.0000  0.0000  0.0000  0.297       0.3099   \n",
+       "1    0.0000  ...     0.000  0.0000  0.3564  0.0000  0.000       0.2359   \n",
+       "2    0.0000  ...     0.000  0.3383  0.2667  0.0000  0.000       0.5296   \n",
+       "3    0.4822  ...     0.000  0.0000  0.0000  0.4822  0.000       0.2516   \n",
+       "\n",
+       "   python     so    the  would  \n",
+       "0  0.2341  0.297  0.297  0.000  \n",
+       "1  0.0000  0.000  0.000  0.452  \n",
+       "2  0.0000  0.000  0.000  0.000  \n",
+       "3  0.3801  0.000  0.000  0.000  \n",
+       "\n",
+       "[4 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# TfidfVectorizer Example\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "X_tfidf = tfidf_vectorizer.fit_transform(X)\n",
+    "X_tfidf_df = pd.DataFrame(X_tfidf.toarray(), columns= tfidf_vectorizer.get_feature_names_out())\n",
+    "X_tfidf_df.round(4)\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b221c941-7159-4f67-a0b3-387923a620ab",
+   "cell_type": "markdown",
+   "id": "4f14ae78-f689-457e-b068-3cfd162bcda2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Comparison\n",
+    "\n",
+    "CountVectorizer:\n",
+    "\n",
+    "Simple word counts. Common words that appear in many documents could overshadow meaningful terms.\n",
+    "\n",
+    "Use CountVectorizer when you want a simple representation and do not need to consider the importance of a term relative to the corpus.\n",
+    "\n",
+    "TfidfVectorizer:\n",
+    "\n",
+    "Weights the word counts by a measure of how often they appear in the documents, which helps to adjust for the frequency of words across all documents.\n",
+    "\n",
+    "Use TfidfVectorizer when you want to determine important terms that are relevant in the context of the entire corpus.\n",
+    "\n",
+    "Either vectorizer can also perform additional preprocessing on the text data, such as:\n",
+    "\n",
+    "Eliminating stopwords (Not removed by default)\n",
+    "\n",
+    "Creating n-grams as well as single tokens.\n",
+    "\n",
+    "Changing tokenization patterns (or using a custom function to tokenize)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "092acf17-875c-45cf-b922-a2b2d6e296c7",
+   "cell_type": "markdown",
+   "id": "1bae14b8-7685-443a-a5ab-057be957a216",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c947e00-744a-46c9-ae5a-dd8fcbc3bd4e",
+   "id": "8e4de6a9-6e36-47a3-9ffd-3872a4283518",
    "metadata": {},
    "outputs": [],
    "source": []
