--- a/core-text-classification-sklearn.ipynb
+++ b/core-text-classification-sklearn.ipynb
@@ -47,7 +47,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f0c2f1f3-3753-4779-9c23-13a3a148cf64",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3540,7 +3542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "id": "63ec37ea-6225-42d0-a8b3-6514a87a98af",
    "metadata": {},
    "outputs": [],
@@ -3563,12 +3565,13 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import ConfusionMatrixDisplay, classification_report\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.naive_bayes import MultinomialNB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "id": "73c022df-117c-4e5c-abb9-8d0e3baace19",
    "metadata": {},
    "outputs": [],
@@ -3663,7 +3666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "a564a819-e8e0-4e80-b008-4f778626388d",
    "metadata": {},
    "outputs": [],
@@ -3675,7 +3678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "91e90a72-31ed-4db5-b40e-c464b1b7e75a",
    "metadata": {},
    "outputs": [
@@ -3687,7 +3690,7 @@
        "Name: label, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3699,7 +3702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "0a33a8b5-438a-4c87-a637-cf0e67b4396c",
    "metadata": {},
    "outputs": [],
@@ -3727,7 +3730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "id": "066b28f8-90d7-4627-a88e-93eff56c1497",
    "metadata": {},
    "outputs": [
@@ -3743,7 +3746,7 @@
        "                ('clf', RandomForestClassifier(random_state=42))])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3757,7 +3760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "id": "1f90e382-12d2-47c7-9617-f70d5792a0d4",
    "metadata": {},
    "outputs": [
@@ -3844,11 +3847,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "490513a0-3cee-4676-99bc-f41741d53ba4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define a param grid with options for the vectorizer\n",
+    "param_grid = {\n",
+    "    'vectorizer': [CountVectorizer(), TfidfVectorizer()],\n",
+    "    'clf__alpha': [.5, 1]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "21c6ef38-a69a-42d8-9e1d-57022bd087b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up Pipeline to allow GridSearching different vectorizers\n",
+    "vect_pipe = Pipeline([('vectorizer', CountVectorizer()), # This is just a placeholder\n",
+    "                     ('clf',MultinomialNB())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d07fb07b-4905-4f4e-87c6-48af4e5f1fc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define params to try for both vectorizers\n",
+    "param_grid_shared = {\n",
+    "    \"vectorizer__max_df\": [0.7, 0.8, 0.9],\n",
+    "    'vectorizer__min_df': [ 2, 3, 4 ], \n",
+    "    \"vectorizer__max_features\": [None, 1000, 2000],\n",
+    "    \"vectorizer__stop_words\": [None,'english'],\n",
+    "    \"vectorizer__ngram_range\": [(1, 1), (1, 2)]\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "# Setting params for the count vectorizer\n",
+    "param_grid_count = {\n",
+    "    'vectorizer':[CountVectorizer()],\n",
+    "    **param_grid_shared\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Setting params for tfidf vectorizer \n",
+    "param_grid_tfidf = {\n",
+    "    'vectorizer': [TfidfVectorizer()],\n",
+    "    \"vectorizer__norm\": [\"l1\", \"l2\"],\n",
+    "    \"vectorizer__use_idf\": [True, False],\n",
+    "    **param_grid_shared\n",
+    "}\n",
+    "\n",
+    "# combine into list of params\n",
+    "params_combined = [param_grid_count, param_grid_tfidf]"
+   ]
   },
   {
    "cell_type": "markdown",
